# mineral_detect

./: CMakeLists.txt  nodelet_info.xml  package.xml
cfg/: dynamic.cfg
config/: ost.yaml
include/mineral_detect/: mineral_detect.h
launch/: mineral_detect.launch
src/: main.cpp
